package eapli.base.repositories;

import eapli.base.domain.Meeting;
import eapli.framework.domain.repositories.DomainRepository;
import eapli.framework.general.domain.model.Designation;

public interface MeetingsRepository extends DomainRepository<Long, Meeting> {
}
